--- a/java-a-to-z/pom.xml
+++ b/java-a-to-z/pom.xml
@@ -1,7 +1,7 @@
 <project>
     <modelVersion>4.0.0</modelVersion>
     <groupId>ru.job4j</groupId>
-    <artifactId>junior</artifactId>
+    <artifactId>java-a-to-z</artifactId>
     <packaging>pom</packaging>
     <version>2.0</version>
      <name>junior</name>
@@ -12,7 +12,6 @@
        <maven.compiler.target>1.8</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
      </properties>
-
     <modules>
        <module>chapter_001</module>
      </modules>
